k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canhaveinternet-service
  namespace: canhaveinternet
spec:
  type: NodePort
  selector:
    app: canhaveinternet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
