k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canhaveinternet-ingress
  namespace: canhaveinternet
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - canhaveinternet.do.houseofmoran.io
      secretName: canhaveinternet-cert-prod
  rules:
    - host: canhaveinternet.do.houseofmoran.io
      http:
        paths:
          - path: /
            backend:
              serviceName: canhaveinternet-service
              servicePort: 80
